crates/wac-parser/tests/resolution/fail/invalid-borrow.wac
package test:comp;

type x = u32;

type y = borrow<x>;